--- a/src/main/resources/templates/pages/research/readform.html
+++ b/src/main/resources/templates/pages/research/readform.html
@@ -24,7 +24,7 @@
             <!--                hide scroll bar by cover another div-->
 
         </div>
-
+<!--        애니메이션 처리 -->
 <!--        <div class="main-content answer-content before">-->
 
 <!--        </div>-->
@@ -55,6 +55,7 @@
                 rs_seq: research.rs_seq,
                 username: userName
             },
+            // 주의할 점은 type5 도 type0 형태로 저장 된다.
             // {
             //     type: "0",
             //     no: "1",
@@ -62,383 +63,7 @@
             // }
         ];
     </script>
-<!--    scroll wheel event-->
-    <script>
-        let isScrolling = false;
-
-        window.addEventListener('wheel', function(event) {
-            if (isScrolling) return;
-            const deltaY = event.deltaY;
-            if (deltaY < 0) {
-                // console.log("한 페이지 이전");
-                handleAnswerPage('<');
-            } else if (deltaY > 0) {
-                // console.log("한 페이지 이후");
-                handleAnswerPage('>');
-            }
-            isScrolling = true;
-            setTimeout(function() {
-                isScrolling = false;
-            }, 800);
-        });
-    </script>
-
-    <script>
-        let currentRsiNo = 0;
-
-        document.querySelector(".answer-content-body").innerHTML = createIntroHTML();
-
-
-
-        function handleAnswerPage(direction) {
-            // 현재의 답변이 작성 되었는 지 확인
-            if(!isAnswered() && direction === '>' && currentRsiNo !== 0){
-                alert("답변을 작성해 주세요.");
-                return;
-            }
-            let answerContent = document.querySelector(".answer-content-body");
-            if (direction === '>') {
-                if (currentRsiNo < rsiList.length) {
-                    currentRsiNo+=1;
-                }
-            } else if (direction === '<') {
-                if (currentRsiNo > 0) {
-                    currentRsiNo-=1;
-                }
-            }
-            setCurrentQNum();
-            answerContent.innerHTML = createAnswerContentHTMLByPage(currentRsiNo);
-        //     type 에 따라 답을 여기서 넣어 줘야 한다.
-            answerList.forEach((item)=>{
-                if(item.no === currentRsiNo){
-                    setAnswerBySavedValue(answerContent,currentRsiNo)
-                }
-            })
-            // 여기서 이벤트 다는 것이 합리적인 선택 인가?
-            setEventListenersOnInputs();
-        }
-
-        function setEventListenersOnInputs(){
-            let answerContent = document.querySelector(".answer-content-body");
-            let inputs = answerContent.querySelectorAll("input[name='choice']");
-            // todo 주관식은 따로 처리 해야 한다.
-            inputs.forEach((item)=>{
-                item.addEventListener("change",()=>{
-                    saveAnswerOnChange();
-                })
-            })
-        }
-
-        function isAnswered(){
-            let isAnswered = false;
-            answerList.forEach((item)=>{
-                if(item.no === currentRsiNo){
-                    isAnswered = true;
-                }
-            })
-            return isAnswered;
-        }
-
-        function setAnswerBySavedValue(answerContent,num){
-            if(answerList.length > num){
-                let type = answerList[num].type
-                if(type === "3"){
-                    answerContent.querySelector("input[name='choice']").value = answerList[num].rsi_answer;
-                }
-                // todo: 다중 선택 항목은 다른 로직이 필요함
-                else{
-                    answerContent.querySelectorAll("input[name='choice']").forEach((item)=>{
-                        // 여기서 rsi_answer 의 형태 확인 해야 한다.
-                        if(item.value === answerList[num].rsi_answer){
-                            item.checked = true;
-                        }
-                    })
-                }
-            }
-        }
-
-        function saveAnswerOnChange(){
-            let temp = document.querySelector("#question-number");
-            let type = temp.querySelector("span").innerText;
-            let rsi_answer = saveAnswerByType(type);
-            if(rsi_answer === null){
-                return false;
-            }
-
-            // 여기서 해당 번호가 있으면 업데이트 없다면 생성
-
-            let answerObj = {
-                rs_seq: research.rs_seq,
-                username: userName,
-                no : currentRsiNo,
-                type: type,
-                rsi_answer: rsi_answer.value,
-            }
-
-            let isExist = false;
-            answerList.forEach((item,index)=>{
-                if(item.no === currentRsiNo){
-                    item.rsi_answer = rsi_answer.value;
-                    isExist = true;
-                    answerList[index]=answerObj;
-                }
-            })
-            if(!isExist) answerList.push(answerObj);
-            return true;
-        }
-
-        function saveAnswerByType(type){
-            let answer = null;
-            let answerContentBody = document.querySelector(".answer-content-body");
-            // 0: 객관식 1: OX 2: likert 3: 주관식 4: 별점 5: 다중선택
-            switch (type) {
-                case "0":
-                    answer = answerContentBody.querySelector("input[name='choice']:checked");
-                    break;
-                case "1":
-                    answer = answerContentBody.querySelector("input[name='choice']:checked");
-                    break;
-                case "2":
-                    answer = answerContentBody.querySelector("input[name='choice']:checked");
-                    break;
-                case "3":
-                    answer = answerContentBody.querySelector("input[name='choice'].value");
-                    break;
-                case "4":
-                    answer = answerContentBody.querySelector("input[name='choice']:checked");
-                    break;
-                case "5":
-                    answer = answerContentBody.querySelectorAll("input[name='choice']:checked");
-                    break;
-            }
-            return answer;
-        }
-
-        function setCurrentQNum() {
-            document.querySelector("#currentQNum").innerText = currentRsiNo;
-        }
-
-        function createIntroHTML() {
-            return `
-               <div class="d-flex col">
-                <div id="question-number" class="col-2 d-flex justify-content-end me-3">
-                    <span style="display: none">0</span>
-                    <span class="text-white">설문 내용</span>
-                    <span>-></span>
-                </div>
-
-                <div class="col-10 pe-5">
-                    <div>${research.rs_title}</div>
-                    <div>${research.rs_desc}</div>
-
-                    <div class="d-flex row">
-                        <div class="row-cols-6">
-                            <div class="col w-75">
-                                <div class="col-4">
-                                    <span class="text-white">시작일</span>
-                                </div>
-                                <div class="col-8">
-                                    <span>${research.rs_start_date}</span>
-                                </div>
-                            </div>
-                            <div class="col w-75">
-                                <div class="col-4">
-                                    <span class="text-white">종료일</span>
-                                </div>
-                                <div class="col-8">
-                                    <span>${research.rs_end_date}</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-                `;
-        }
-
-        function createType0HTML(index) {
-            let choices="";
-                // rsi_type0_1
-            if(rsiList[index].rsi_type0_1 !== null)
-                choices += `
-                    <div class="row-cols-6 mt-5">
-                        <input type="radio" name="choice" value="1">
-                        <span>${rsiList[index].rsi_type0_1}</span>
-                    </div>
-                `
-            if(rsiList[index].rsi_type0_2 !== null)
-                choices += `
-                    <div class="row-cols-6 mt-5">
-                        <input type="radio" name="choice" value="2">
-                        <span>${rsiList[index].rsi_type0_2}</span>
-                    </div>
-                `
-            if(rsiList[index].rsi_type0_3 !== null)
-                choices += `
-                    <div class="row-cols-6 mt-5">
-                        <input type="radio" name="choice" value="3">
-                        <span>${rsiList[index].rsi_type0_3}</span>
-                    </div>
-                `
-            if(rsiList[index].rsi_type0_4 !== null)
-                choices += `
-                    <div class="row-cols-6 mt-5">
-                        <input type="radio" name="choice" value="4">
-                        <span>${rsiList[index].rsi_type0_4}</span>
-                    </div>
-                `
-            if(rsiList[index].rsi_type0_5 !== null)
-                choices += `
-                    <div class="row-cols-6 mt-5">
-                        <input type="radio" name="choice" value="5">
-                        <span>${rsiList[index].rsi_type0_5}</span>
-                    </div>
-                `
-
-            return `
-               <div class="d-flex col h-100">
-                <div id="question-number" class="col-2 d-flex justify-content-end me-3">
-                    <span style="display: none">${rsiList[index].rsi_type}</span>
-
-                    <span class="text-white">설문 내용</span>
-                    <span>-></span>
-                </div>
-
-                <div class="col-10 pe-5">
-                    <span>Q${currentRsiNo}</span>
-                    <span>${rsiList[index].rsi_question}</span>
-
-                    <div class="d-flex row">
-
-                `
-                +choices+
-                `
-                    </div>
-                </div>
-            </div>
-                `
-        }
-
-        function createType1HTML(index) {
-            // 0: 객관식 1: OX 2: likert 3: 주관식 4: 별점 5: 다중선택
-            return `
-               <div class="d-flex col h-100">
-                <div id="question-number" class="col-2 d-flex justify-content-end me-3">
-                    <span style="display: none">${rsiList[index].rsi_type}</span>
-
-                    <span class="text-white">설문 내용</span>
-                    <span>-></span>
-                </div>
-
-                <div class="col-10 pe-5">
-                    <span>Q${currentRsiNo}</span>
-                    <span>${rsiList[index].rsi_question}</span>
-
-                    <div class="d-flex row">
-                        <div class="row-cols-6 mt-5">
-                            <input type="radio" name="choice" value="1">
-                            <span>O</span>
-                        </div>
-                        <div class="row-cols-6 mt-5">
-                            <input type="radio" name="choice" value="2">
-                            <span>X</span>
-                        </div>
-                </div>
-            </div>
-                `
-        }
-
-        function createType2HTML(index) {
-            // 0: 객관식 1: OX 2: likert 3: 주관식 4: 별점 5: 다중선택
-            return `
-               <div class="d-flex col h-100">
-                <div id="question-number" class="col-2 d-flex justify-content-end me-3">
-                    <span style="display: none">${rsiList[index].rsi_type}</span>
-                    <span class="text-white">설문 내용</span>
-                    <span>-></span>
-                </div>
-
-                <div class="col-10 pe-5">
-                    <span>Q${currentRsiNo}</span>
-                    <span>${rsiList[index].rsi_question}</span>
-
-                    <ul class="question-list m-0 p-0 pt-5 likert">
-                        <li>
-                          <input type="radio" name="choice" value="1">
-                          <label>매우 비동의</label>
-                        </li>
-                        <li>
-                          <input type="radio" name="choice" value="2">
-                          <label>비동의</label>
-                        </li>
-                        <li>
-                          <input type="radio" name="choice" value="3">
-                          <label>보통</label>
-                        </li>
-                        <li>
-                          <input type="radio" name="choice" value="4">
-                          <label>동의</label>
-                        </li>
-                        <li>
-                          <input type="radio" name="choice" value="5">
-                          <label>매우 동의</label>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-                `
-        }
-
-        function createType3HTML(index) {
-            return undefined;
-        }
-
-        function createType4HTML(index) {
-            return undefined;
-        }
-
-        function createType5HTML(index) {
-            return undefined;
-        }
-
-        function createAnswerContentHTMLByPage(pageNum) {
-            let answerContent;
-
-            if(pageNum === 0){
-                return createIntroHTML();
-            }
-
-            let index = pageNum-1;
-            let type = rsiList[index].rsi_type;
-
-            switch (type) {
-                case "0":
-                    answerContent=createType0HTML(index);
-                    break;
-                case "1":
-                    answerContent=createType1HTML(index);
-                    break;
-                case "2":
-                    answerContent=createType2HTML(index);
-                    break;
-                case "3":
-                    answerContent=createType3HTML(index);
-                    break;
-                case "4":
-                    answerContent=createType4HTML(index);
-                    break;
-                case "5":
-                    answerContent=createType5HTML(index);
-                    break;
-            }
-            return answerContent;
-        }
-
-    </script>
-
-    <script>
-        // createReadMainContentElementByType(currentRsiNo,rsiList[currentRsiNo].rsi_question , rsiList[currentRsiNo].rsi_type)
-    </script>
+    <script th:src="@{/js/readform-answerContent.js}"></script>
 </div>
 </body>
 </html>
