--- a/src/main/resources/templates/pages/admin/admin.html
+++ b/src/main/resources/templates/pages/admin/admin.html
@@ -9,7 +9,10 @@
 </head>
 <body>
 <div layout:fragment="content">
-    admin level access page
+    <h1>Send Message to AWS SNS</h1>
+    <form action="/send-message" method="post">
+        <button type="submit">Send Message</button>
+    </form>
 </div>
 </body>
 </html>
