--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,16 +1,28 @@
 body {
     margin-top: 10px;
-    background: linear-gradient(to bottom, #5ee7df 0%, #b490ca 100%);
+    background: linear-gradient(to bottom, #5ee7df 0%, #ffc107 100%);
     background-size: 100% 300%;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: top;
-    background-color: #b490ca;
+    background-color: #ffc107;
 }
 
 .bottom-10 {
     bottom: 10%;
 !important;
+}
+
+.numeric-input{
+    width: 300px;
+    height: 50px;
+    background-color: transparent;
+    border-radius: 0;
+    border: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /*font-size: 3px*/
 }
 
 
