--- a/src/main/resources/templates/pages/research/listform.html
+++ b/src/main/resources/templates/pages/research/listform.html
@@ -13,7 +13,7 @@
         <div>
             <h1 class="text-white">Research List</h1>
             <div class="d-flex justify-content-end">
-                <a href="/research/create" class="btn btn-primary">Create</a>
+                <a href="/research/create" class="btn btn-primary bg-transparent text-info">Create</a>
             </div>
         </div>
     </div>
