--- a/src/main/resources/templates/pages/research/listform.html
+++ b/src/main/resources/templates/pages/research/listform.html
@@ -68,6 +68,8 @@
         /* [[${userRoles}]] 값을 JavaScript 객체로 파싱 */
         let userRoles = /*[[${userRoles}]]*/ {};
         let userNames = /*[[${userNames}]]*/ '';
+        let error = /*[[${error}]]*/ '';
+        if(error) alert(error);
 
         // console.log(userRoles);
         // 사용자 권한 확인 예시
