--- a/src/main/resources/templates/pages/research/listform.html
+++ b/src/main/resources/templates/pages/research/listform.html
@@ -69,7 +69,7 @@
         let userRoles = /*[[${userRoles}]]*/ {};
         let userNames = /*[[${userNames}]]*/ '';
         let error = /*[[${error}]]*/ '';
-        if(error) alert(error);
+        if(error==="answered") alert("이미 참여한 설문 조사 입니다.");
 
         // console.log(userRoles);
         // 사용자 권한 확인 예시
