delete footer on defaultLayout.html

--- a/src/main/resources/templates/common/defaultLayout.html
+++ b/src/main/resources/templates/common/defaultLayout.html
@@ -16,6 +16,6 @@
     <div id="layout-content" layout:fragment="content">
     </div>
 
-    <div th:replace="~{fragments/footer :: footer}"></div>
+<!--    <div th:replace="~{fragments/footer :: footer}"></div>-->
 </body>
 </html>
