change end of data at bottom background color as 102,102,255

--- a/src/main/resources/templates/pages/research/listform.html
+++ b/src/main/resources/templates/pages/research/listform.html
@@ -276,7 +276,7 @@
             if (noMoreData) {
                 $("#loading").html(
                     `<div class="d-flex justify-content-center">
-                        <div class="alert alert-primary" role="alert">
+                        <div class="alert alert-primary" role="alert" style="background: rgb(102,102,255)">
                           end of data
                         </div>
                       </div>`
