--- a/src/main/resources/templates/fragments/intro.html
+++ b/src/main/resources/templates/fragments/intro.html
@@ -49,7 +49,7 @@
 <!--                            </button>-->
 <!--                        </li>-->
 <!--                    </ul>-->
-<!--                    <div onclick="handleQuestionItemAddButtonClick(this)">질문 추가</div>-->
+<!--                    <div onclick="handleQuestionItemAddButtonClick(this)">문항 추가</div>-->
 
 <!--                </div>-->
 
