--- a/src/main/resources/templates/pages/research/createform.html
+++ b/src/main/resources/templates/pages/research/createform.html
@@ -14,9 +14,14 @@
     <!--    main content-->
 <!--    여기는 하드코딩으로 바꿔야함-->
     <div class="main-content-container">
-        <div class="text-info">
-            Main Content
-        </div>
+
+        <!--    토글 버튼-->
+        <button class="sidebar-toggle shadow-none bg-transparent btn btn-toolbar" onclick="toggleAnimation(this)">
+            <img alt="" src="/img/white-burger-menu-icon.png" width="30px" height="30px">
+        </button>
+<!--        <div class="text-info">-->
+<!--            Main Content-->
+<!--        </div>-->
         <div class="main-content d-flex p-0 m-0 pt-3">
             <!--                hide scroll bar by cover another div-->
             <div class="d-flex col">
@@ -58,10 +63,7 @@
         </div>
 
 
-        <!--    토글 버튼-->
-        <button class="sidebar-toggle shadow-none bg-transparent btn btn-toolbar" onclick="toggleAnimation(this)">
-            <img alt="" src="/img/white-burger-menu-icon.png" width="10px" height="10px">
-        </button>
+
     </div>
 
 </div>
