--- a/src/main/resources/templates/pages/research/listform.html
+++ b/src/main/resources/templates/pages/research/listform.html
@@ -13,7 +13,7 @@
         <div>
             <h1 class="text-white">Research List</h1>
             <div class="d-flex justify-content-end">
-                <a href="/research/create" class="btn btn-primary text-info" style="background: #CCCCFF">Create</a>
+                <a href="/research/create" class="btn btn-primary" style="background: #CCCCFF;border: #CCCCFF; color: white">Create</a>
             </div>
         </div>
     </div>
@@ -276,7 +276,7 @@
             if (noMoreData) {
                 $("#loading").html(
                     `<div class="d-flex justify-content-center">
-                        <div class="alert alert-primary" role="alert" style="background: rgb(102,102,255)">
+                        <div class="alert alert-primary" role="alert" style="background: rgb(102,102,255);color: white">
                           end of data
                         </div>
                       </div>`
