--- a/src/main/resources/templates/pages/auth/login.html
+++ b/src/main/resources/templates/pages/auth/login.html
@@ -18,17 +18,13 @@
     <div th:if="${loginError}">
         <p th:text="${loginError}"></p>
     </div>
-    <fieldset>
-        <form th:action="@{/auth/login}" method="post">
-            <label>
-                <input type="text" name="username" placeholder="Username" value="zombil8731" required="required" />
-            </label>
-            <label>
-                <input type="password" name="password" placeholder="Password" value="1234" required="required" />
-            </label>
-            <input type="submit" class="btn btn-lg btn-primary btn-block" value="Sign In"/>
+    <div class="login-page">
+        <form class="login-form" th:action="@{/auth/login}" method="post">
+            <input type="text" placeholder="Username" name="username"/>
+            <input type="password" placeholder="Password" name="password"/>
+            <button type="submit">로그인</button>
         </form>
-    </fieldset>
+    </div>
 </div>
 
 
