--- a/src/main/resources/templates/pages/auth/register.html
+++ b/src/main/resources/templates/pages/auth/register.html
@@ -8,17 +8,57 @@
 </head>
 <body>
 <div layout:fragment="content">
-    <h1>Register</h1>
     <fieldset>
-        <legend>Register</legend>
         <div th:if="${param.error}">
-            Invalid username and password.
+            비번 틀렸습니다.
         </div>
         <div th:if="${param.logout}">
-            You have been logged out.
+            로그아웃 했습니다.
         </div>
     </fieldset>
     <fieldset>
+
+        <div class="register-page">
+            <form class="register-form" th:object="${registrationDTO}" th:action="@{/auth/register}" method="post">
+                아이디
+                <br>
+                <input type="text" name="username" size=35>
+                <small class="alert alert-danger" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Username
+                    Error</small>
+                <br>
+                비밀번호
+                <br>
+                <input type="password" name="password" size=35>
+                <small class="alert alert-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password
+                    Error</small>
+                <br>
+                비밀번호 체크
+                <br>
+                <input type="password" name="PasswordConfirm" size=35>
+                <span class="alert alert-danger" th:if="${#fields.hasErrors('passwordConfirm')}"
+                      th:errors="*{passwordConfirm}">Password Confirm Error</span>
+                <br>
+                이름
+                <br>
+                <input type="text" name="name" size=35>
+                <span class="alert alert-danger" th:if="${#fields.hasErrors('name')}"
+                      th:errors="*{name}">Name Error</span>
+                <br>
+                이메일
+                <br>
+                <input type="text" name="email" size=35>
+                <span class="alert alert-danger" th:if="${#fields.hasErrors('email')}"
+                      th:errors="*{email}">Email Error</span>
+                <br>
+                전화번호
+                <br>
+                <input type="text" name="phone" size=35>
+                <span class="alert alert-danger" th:if="${#fields.hasErrors('phone')}"
+                      th:errors="*{phone}">Phone Error</span>
+                <br>
+                <button type="submit">가입완료</button>
+            </form>
+        </div>
 
         <form th:object="${registrationDTO}" th:action="@{/auth/register}" method="post">
             <div>
