--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -21,7 +21,7 @@
                 <p class="text-white m-0 me-3">Welcome, <span th:text="${#authentication.principal.name}"></span>!</p>
             </div>
             <ul class="navbar-nav me-0 custom-nav">
-                <li class="nav-item "><a th:href="@{/}" class="nav-link ">Home</a></li>
+<!--                <li class="nav-item "><a th:href="@{/}" class="nav-link ">Home</a></li>-->
                 <li class="nav-item"><a th:href="@{/research/list}" class="nav-link ">List</a></li>
                 <li th:if="${#authorization.expression('isAuthenticated()')}" class="nav-item">
                     <!-- 로그인한 사용자 -->
