--- a/src/main/resources/templates/pages/research/listform.html
+++ b/src/main/resources/templates/pages/research/listform.html
@@ -88,7 +88,9 @@
             let temp = []
             const currentDate = new Date();
 
-            const startDate = new Date(rs.rs_start_date);
+            let startDate = new Date(rs.rs_start_date);
+            // strartDate 에서 하루를 뺀다
+            startDate.setDate(startDate.getDate() - 1);
             const endDate = new Date(rs.rs_end_date);
 
             const totalTime = endDate - startDate;
@@ -102,7 +104,7 @@
                 daysAgo = '오늘'
             else if(daysAgo === 1)
                 daysAgo = '어제'
-                else if (daysAgo > 1)
+            else if (daysAgo > 1)
                 daysAgo = daysAgo + '일 전'
             else
                 // 음수인 경우 양수로 변경
