--- a/src/main/resources/templates/pages/research/listform.html
+++ b/src/main/resources/templates/pages/research/listform.html
@@ -69,11 +69,10 @@
         let userRoles = /*[[${userRoles}]]*/ {};
         let userNames = /*[[${userNames}]]*/ '';
         let error = /*[[${error}]]*/ '';
-        if(error==="answered") alert("이미 참여한 설문 조사 입니다.");
-
-        // console.log(userRoles);
-        // 사용자 권한 확인 예시
-        // if (userRoles.includes('ROLE_ADMIN')) {
+        if(error==="answered") {
+            alert("이미 참여한 설문 조사 입니다.");
+            window.location.href = "/research/list";
+        }
 
     </script>
 
