fix design navbar in noScroll-navbar.html

--- a/src/main/resources/templates/fragments/noScroll-navbar.html
+++ b/src/main/resources/templates/fragments/noScroll-navbar.html
@@ -19,7 +19,7 @@
 <!--                &lt;!&ndash; 로그인한 사용자만 볼 수 있는 내용 &ndash;&gt;-->
 <!--                <p class="text-white m-0 me-3">Welcome, <span th:text="${#authentication.principal.name}"></span>!</p>-->
 <!--            </div>-->
-            <ul class="navbar-nav ms-auto">
+            <ul class="navbar-nav navbar-no-scroll ms-auto">
 <!--                <li class="nav-item"><a th:href="@{/}" class="nav-link ">Home</a></li>-->
                 <li class="nav-item"><a th:href="@{/research/list}" class="nav-link ">List</a></li>
 <!--                <li class="nav-item"><a th:href="@{/user/test}" class="nav-link ">UserPage</a></li>-->
